testdata/zkc/invalid/cast_invalid_05.zkc
//error:3:7-24:expected type u8
fn f(x:u8) -> (r:u16) {
  r = (x & 0x0f) as u16
  return
}
